--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "ElectronReact",
-  "version": "0.10.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "watcher",
+  "productName": "rinobot-app",
+  "version": "0.0.1",
+  "description": "Rinobot automates your data tasks",
   "main": "main.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js test/**/*.spec.js",
@@ -52,12 +52,14 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-webpack-loaders": "^0.5.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
@@ -75,13 +77,11 @@
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "evaporate": "git+https://github.com/TTLabs/EvaporateJS.git",
-    "watcher": "git+https://github.com/rinocloud/watcher.git",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
     "jsdom": "^9.2.0",
     "json-loader": "^0.5.4",
-    "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
@@ -92,26 +92,28 @@
     "redux-logger": "^2.6.1",
     "selenium-webdriver": "^2.53.2",
     "sinon": "^1.17.4",
-    "style-loader": "^0.13.1",
-    "superagent": "^1.8.3",
-    "superagent-promise-plugin": "^3.2.0",
-    "superagent-queue": "0.0.3",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "acorn": "^3.1.0",
+    "ansi_up": "^1.3.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
     "chokidar": "^1.5.1",
     "css-modules-require-hook": "^4.0.0",
     "electron-debug": "^1.0.0",
     "font-awesome": "^4.6.3",
-    "fsevents": "^1.0.12",
+    "graceful-fs": "^4.1.4",
+    "halogen": "^0.2.0",
     "lodash": "^4.13.1",
+    "mkdirp": "^0.5.1",
     "postcss": "^5.0.21",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
+    "react-highlight": "^0.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
@@ -119,7 +121,13 @@
     "redux-actions": "^0.9.1",
     "redux-persist": "^3.2.2",
     "redux-thunk": "^2.1.0",
+    "rinobot": "^0.3.3",
+    "rinocloud-javascript": "github:rinocloud/rinocloud-javascript",
     "source-map-support": "^0.4.0",
+    "style-loader": "^0.13.1",
+    "superagent": "^1.8.3",
+    "superagent-promise-plugin": "^3.2.0",
+    "superagent-queue": "0.0.3",
     "tap": "^5.7.2",
     "underscore": "^1.8.3"
   },
