--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "watcher",
-  "productName": "rinobot-app",
-  "version": "0.0.1",
+  "productName": "rinobot",
+  "version": "0.0.2",
   "description": "Rinobot automates your data tasks",
   "main": "main.js",
   "scripts": {
@@ -28,9 +28,9 @@
     "url": "git+https://github.com/chentsulin/electron-react-boilerplate.git"
   },
   "author": {
-    "name": "C. T. Lin",
-    "email": "chentsulin@gmail.com",
-    "url": "https://github.com/chentsulin"
+    "name": "Eoin Murray",
+    "email": "eoin@rinocloud.com",
+    "url": "https://github.com/rinocloud"
   },
   "license": "MIT",
   "bugs": {
@@ -122,7 +122,7 @@
     "redux-actions": "^0.9.1",
     "redux-persist": "^3.2.2",
     "redux-thunk": "^2.1.0",
-    "rinobot": "^0.3.7",
+    "rinobot": "^0.3.20",
     "rinocloud-javascript": "github:rinocloud/rinocloud-javascript",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
