--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chentsulin/electron-react-boilerplate.git"
+    "url": "git+https://github.com/rinocloud/rinobot.git"
   },
   "author": {
     "name": "Eoin Murray",
@@ -34,7 +34,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chentsulin/electron-react-boilerplate/issues"
+    "url": "https://github.com/rinocloud/rinobot/issues"
   },
   "keywords": [
     "electron",
@@ -52,14 +52,18 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-transform-remove-console": "^6.8.0",
+    "babel-plugin-transform-remove-debugger": "^6.8.0",
     "babel-plugin-webpack-loaders": "^0.5.0",
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-stage-3": "^6.11.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
@@ -68,11 +72,14 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "devtron": "^1.2.0",
+    "electron-devtools-installer": "^1.1.2",
     "electron-packager": "^7.0.2",
-    "electron-prebuilt": "^1.2.0",
-    "electron-rebuild": "^1.1.5",
+    "electron-prebuilt": "^1.2.3",
+    "electron-rebuild": "^1.1.4",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
+    "eslint-import-resolver-webpack": "^0.3.0",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
@@ -85,12 +92,11 @@
     "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
     "react-addons-test-utils": "^15.1.0",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
     "selenium-webdriver": "^2.53.2",
     "sinon": "^1.17.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -103,6 +109,7 @@
     "chokidar": "^1.5.1",
     "css-modules-require-hook": "^4.0.0",
     "electron-debug": "^1.0.0",
+    "electron-devtools-installer": "^1.1.4",
     "evaporate": "git+https://github.com/TTLabs/EvaporateJS.git",
     "font-awesome": "^4.6.3",
     "graceful-fs": "^4.1.4",
