--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,15 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports", "transform-object-rest-spread"],
+  "plugins": ["add-module-exports"],
   "env": {
+  	"production": {
+  		"presets": ["react-optimize"],
+  		"plugins": [
+  			"babel-plugin-transform-remove-console",
+  			"babel-plugin-transform-remove-debugger",
+  			"babel-plugin-dev-expression"
+  		]
+  	},
     "development": {
       "presets": ["react-hmre"]
     },
