--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack",
     "react-hot"
   ],
-  "homepage": "https://github.com/chentsulin/electron-react-boilerplate#readme",
+  "homepage": "https://github.com/rinocloud/rinobot#readme",
   "devDependencies": {
     "asar": "^0.11.0",
     "babel-core": "^6.9.0",
@@ -132,6 +132,7 @@
     "redux-actions": "^0.9.1",
     "redux-persist": "^3.2.2",
     "redux-thunk": "^2.1.0",
+    "request": "^2.72.0",
     "rinobot": "^0.3.20",
     "rinocloud-javascript": "github:rinocloud/rinocloud-javascript",
     "source-map-support": "^0.4.0",
@@ -140,6 +141,7 @@
     "superagent-promise-plugin": "^3.2.0",
     "superagent-queue": "0.0.3",
     "tap": "^5.7.2",
+    "tar": "^2.2.1",
     "underscore": "^1.8.3"
   },
   "devEngines": {
