--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,10 @@
     "no-use-before-define": 0,
     "import/no-unresolved": [2, { ignore: ['electron'] }],
     "react/jsx-no-bind": 0,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "semi": 0,
+    "func-names": 0,
+    "no-underscore-dangle": 0
   },
   "plugins": [
     "import",
