--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
     "electron-packager": "^7.0.2",
     "electron-prebuilt": "^1.2.3",
     "electron-rebuild": "^1.1.4",
-    "eslint": "^2.10.2",
+    "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.3.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.2.2",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-import": "^1.10.1",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
@@ -119,6 +119,7 @@
     "halogen": "^0.2.0",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
     "postcss": "^5.0.21",
     "querystring": "^0.2.0",
     "react": "^15.1.0",
