--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   ],
   "homepage": "https://github.com/rinocloud/rinobot#readme",
   "devDependencies": {
+    "amplitude-js": "github:amplitude/Amplitude-Javascript",
     "asar": "^0.11.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.4",
@@ -92,6 +93,7 @@
     "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
     "react-addons-test-utils": "^15.1.0",
+    "react-jsonschema-form": "github:mozilla-services/react-jsonschema-form",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
@@ -119,6 +121,7 @@
     "halogen": "^0.2.0",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
+    "moment": "^2.14.1",
     "ncp": "^2.0.0",
     "postcss": "^5.0.21",
     "querystring": "^0.2.0",
@@ -126,6 +129,7 @@
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
     "react-highlight": "^0.8.0",
+    "react-jsonschema-form": "^0.36.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
