--- a/test-fixtures/sxm/rino.yaml
+++ b/test-fixtures/sxm/rino.yaml
@@ -1,9 +1,9 @@
-apiToken: 8186755009251ef0bbb273fbc86d7b9caa228374
 
 uploadTo: "test/sxm"
 
-ignore:
-  - "*.py"
+metadata:
+  location: 'test/alpha'
+  value: 'something'
 
 tasks:
   - match: "*.sxm"
