--- a/package.json
+++ b/package.json
@@ -138,7 +138,8 @@
     "redux-persist": "^3.2.2",
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
-    "rinobot": "^0.3.20",
+    "rimraf": "^2.5.3",
+    "rinobot": "^0.3.21",
     "rinocloud-javascript": "github:rinocloud/rinocloud-javascript",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
