--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "description": "Rinobot automates your data tasks",
   "main": "main.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js test/**/*.spec.js",
-    "test-watch": "npm test -- --watch",
-    "test-e2e": "cross-env NODE_ENV=test mocha --compilers js:babel-register --require ./test/setup.js --require co-mocha ./test/e2e.js",
-    "lint": "eslint app test *.js",
-    "hot-server": "node -r babel-register server.js",
     "build-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
+    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\"",
+    "hot-server": "node -r babel-register server.js",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./main.development",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
-    "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
+    "check-dev-engines": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
+    "install-rinobot": "cd app/rinobot.js && npm install && cd ..",
+    "install-rinocloud-javascript": "cd app/rinocloud-javascript && npm install && cd ..",
+    "install-submodules": "npm run install-rinobot && npm run install-rinocloud-javascript",
+    "postinstall": "npm run check-dev-engines && npm run install-submodules"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -89,6 +89,7 @@
     "fbjs-scripts": "^0.7.1",
     "jsdom": "^9.2.0",
     "json-loader": "^0.5.4",
+    "loaders.css": "^0.1.2",
     "minimist": "^1.2.0",
     "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
@@ -109,16 +110,15 @@
   "dependencies": {
     "acorn": "^3.1.0",
     "ansi_up": "^1.3.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
     "chokidar": "^1.5.1",
     "css-modules-require-hook": "^4.0.0",
     "electron-debug": "^1.0.0",
     "electron-devtools-installer": "^1.1.4",
+    "electron-prebuilt": "^1.2.7",
     "evaporate": "git+https://github.com/TTLabs/EvaporateJS.git",
     "font-awesome": "^4.6.3",
     "graceful-fs": "^4.1.4",
-    "halogen": "^0.2.0",
+    "loaders.css": "^0.1.2",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
@@ -130,6 +130,7 @@
     "react-dom": "^15.1.0",
     "react-highlight": "^0.8.0",
     "react-jsonschema-form": "^0.36.0",
+    "react-loaders": "^2.1.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
@@ -139,8 +140,6 @@
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "rimraf": "^2.5.3",
-    "rinobot": "^0.3.21",
-    "rinocloud-javascript": "github:rinocloud/rinocloud-javascript",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
     "superagent": "^1.8.3",
