--- a/test-fixtures/large/rino.yaml
+++ b/test-fixtures/large/rino.yaml
@@ -1,5 +1,7 @@
-uploadTo: '2016-07-14'
+uploadTo: videos
 tasks:
   - match: '*'
     command: rinocloud-upload
+metadata:
+  x: 'y'
 apiToken: 8186755009251ef0bbb273fbc86d7b9caa228374
