cleaned up dependancies

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./main.development",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
+    "setup": "npm install && npm fetch-submodules && npm install-submodules",
     "check-dev-engines": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
     "install-rinobot": "cd app/rinobot.js && npm install && cd ..",
     "install-rinocloud-javascript": "cd app/rinocloud-javascript && npm install && cd ..",
+    "fetch-submodules": "git submodule update --init --recursive",
     "install-submodules": "npm run install-rinobot && npm run install-rinocloud-javascript",
-    "postinstall": "npm run check-dev-engines && npm run install-submodules"
+    "postinstall": "npm run check-dev-engines"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -108,37 +110,22 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "acorn": "^3.1.0",
-    "ansi_up": "^1.3.0",
-    "chokidar": "^1.5.1",
     "css-modules-require-hook": "^4.0.0",
-    "electron-debug": "^1.0.0",
-    "electron-devtools-installer": "^1.1.4",
     "electron-prebuilt": "^1.2.7",
     "evaporate": "git+https://github.com/TTLabs/EvaporateJS.git",
-    "font-awesome": "^4.6.3",
-    "graceful-fs": "^4.1.4",
-    "loaders.css": "^0.1.2",
+    "file-loader": "^0.9.0",
+    "js-yaml": "^3.6.1",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
-    "ncp": "^2.0.0",
-    "postcss": "^5.0.21",
-    "querystring": "^0.2.0",
     "react": "^15.1.0",
-    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
-    "react-highlight": "^0.8.0",
-    "react-jsonschema-form": "^0.36.0",
-    "react-loaders": "^2.1.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-actions": "^0.9.1",
-    "redux-persist": "^3.2.2",
     "redux-thunk": "^2.1.0",
-    "request": "^2.72.0",
     "rimraf": "^2.5.3",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
@@ -146,8 +133,7 @@
     "superagent-promise-plugin": "^3.2.0",
     "superagent-queue": "0.0.3",
     "tap": "^5.7.2",
-    "tar": "^2.2.1",
-    "underscore": "^1.8.3"
+    "tar": "^2.2.1"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
