close to making efficient queue for pipelines; look in bot.js

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "app/rinobot.js"]
-	path = app/rinobot.js
-	url = https://github.com/rinocloud/rinobot.js.git
-[submodule "app/rinocloud-javascript"]
-	path = app/rinocloud-javascript
-	url = https://github.com/rinocloud/rinocloud-javascript.git
+[submodule "bot"]
+	path = bot
+	url = http://github.com/rinocloud/rinobot.js
+[submodule "api"]
+	path = api
+	url = http://github.com/rinocloud/rinocloud-javascript
