--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,9 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-actions": "^0.9.1",
+    "redux-debounced": "^0.3.0",
     "redux-logger": "^2.6.1",
+    "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.3",
     "superagent": "^1.8.3",
