--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "api"]
 	path = api
 	url = http://github.com/rinocloud/rinocloud-javascript
+[submodule "app/store/redux-gather"]
+	path = app/store/redux-gather
+	url = git://github.com/rinocloud/redux-gather.git
