--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^5.2.2",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "redux-debounce": "^1.0.1",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
