--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-register",
     "build": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
+    "build-fork": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --profile --colors --watch",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./index.dev",
     "start": "cross-env NODE_ENV=production electron ./index",
     "check-dev-engines": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
@@ -36,11 +37,14 @@
     "fbjs-scripts": "^0.7.1",
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "webpack-node-externals": "^1.2.0"
   },
   "dependencies": {
     "chokidar": "^1.6.0",
     "electron-prebuilt": "^1.2.7",
+    "formidable": "^1.0.17",
+    "ipc-event-emitter": "^1.0.0",
     "source-map-support": "^0.4.2",
     "uid2": "0.0.3",
     "webpack": "^1.13.1"
