rewrote fork-rpc to be smaller, still have intermitten child process related crashes

--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
     "mocha": "^2.5.3",
+    "source-map-support": "^0.4.2",
     "webpack-node-externals": "^1.2.0"
   },
   "dependencies": {
     "chokidar": "^1.6.0",
     "electron-prebuilt": "^1.2.7",
     "formidable": "^1.0.17",
-    "ipc-event-emitter": "^1.0.0",
     "source-map-support": "^0.4.2",
     "uid2": "0.0.3",
     "webpack": "^1.13.1"
