--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "mocha --compilers js:babel-register",
     "build": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
     "build-fork": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --profile --colors --watch",
+    "hot-server": "cd app/ && npm run hot-server",
+    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run build-fork\"",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./index.dev",
     "start": "cross-env NODE_ENV=production electron ./index",
     "check-dev-engines": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
