--- a/test/packages-test/rino.yaml
+++ b/test/packages-test/rino.yaml
@@ -1,6 +1,6 @@
-uploadTo: ''
+uploadTo: asdffds
 tasks:
-  - match: small_list.txt
+  - match: small_list*
     command: Rscript
-    args: increment
+    args: normalise
 apiToken: 8186755009251ef0bbb273fbc86d7b9caa228374
