--- a/test/packages-test/rino.yaml
+++ b/test/packages-test/rino.yaml
@@ -2,5 +2,5 @@ uploadTo: asdffds
 tasks:
   - match: small_list*
     command: Rscript
-    args: normalise
+    args: ''
 apiToken: 8186755009251ef0bbb273fbc86d7b9caa228374
