--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "test": "mocha --compilers js:babel-register",
     "build": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
-    "build-fork": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --profile --colors --watch",
+    "build-fork": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --profile --colors",
+    "fork-dev": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --profile --colors --watch",
     "hot-server": "cd app/ && npm run hot-server",
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run build-fork\"",
+    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run fork-dev\"",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./index.dev",
     "start": "cross-env NODE_ENV=production electron ./index",
     "check-dev-engines": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
@@ -30,6 +31,7 @@
     "cross-env": "^1.0.8",
     "del": "^2.2.0",
     "electron-packager": "^7.0.2",
+    "electron-winstaller": "^2.3.3",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.3.0",
