--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "scripts": {
     "hot-server": "node -r babel-register server.js",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run fork-dev\"",
-    "build": "cross-env NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.electron.js --progress",
+
+    "build-app": "cross-env NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.electron.js --progress",
     "build-lib": "cross-env NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.js --progress",
     "build-fork": "cross-env NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.fork.js --progress",
+    "build": "npm run build-lib && npm run build-app && npm run build-fork",
     "fork-dev": "cross-env NODE_ENV=development node -r babel-register ./node_modules/.bin/webpack --config webpack.config.fork.js --progress --watch",
     "postinstall": "install-app-deps",
+    "dist:win": "build --platform win",
     "dist:osx": "build --platform darwin",
-
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run fork-dev\"",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./app/index.dev",
     "start": "cross-env NODE_ENV=production electron ./app",
     "docs:clean": "rimraf _book",
@@ -64,6 +65,7 @@
     "del": "^2.2.0",
     "electron-builder": "^5.18.0",
     "electron-prebuilt": "^1.2.7",
+    "electron-squirrel-startup": "^1.0.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.3.0",
@@ -147,5 +149,4 @@
       "react"
     ]
   }
-
 }
