--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "build": {
+    "appId": "co.rinocloud.rinobot",
+    "category": "public.app-category.science-tools",
+    "asar": false,
+    "iconUrl": "https://raw.githubusercontent.com/rinocloud/logos/master/icon.ico",
+    "win": {
+      "certificateFile": "/Users/eoinmurray/Documents/crypto/helena_startssl/rinocloud-win-cert.p12"
+    }
+  },
   "scripts": {
     "hot-server": "node -r babel-register server.js",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run fork-dev\"",
@@ -9,8 +18,8 @@
     "fork-dev": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --watch",
     "postinstall": "install-app-deps",
     "dist": "build",
-    "dist:win": "build --platform win",
-    "dist:osx": "build --platform darwin",
+    "dist:win": "export CSC_LINK=$CSC_LINK_WIN && build --platform win",
+    "dist:osx": "export CSC_LINK=$CSC_LINK_MAC && build --platform darwin",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./app/index.dev",
     "start": "cross-env NODE_ENV=production electron ./app",
     "docs:clean": "rimraf _book",
@@ -57,7 +66,7 @@
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
-    "electron-builder": "^5.18.0",
+    "electron-builder": "^5.24.0",
     "electron-prebuilt": "^1.2.7",
     "electron-squirrel-startup": "^1.0.0",
     "eslint": "^2.13.1",
@@ -79,12 +88,6 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1",
     "webpack-node-externals": "^1.2.0"
-  },
-  "build": {
-    "appId": "co.rinocloud.rinobot",
-    "app-category-type": "public.app-category.science-tools",
-    "asar": false,
-    "iconUrl": "https://raw.githubusercontent.com/rinocloud/logos/master/icon.ico"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
