--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "fork-dev": "cross-env NODE_ENV=development node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress --watch",
     "postinstall": "install-app-deps",
     "dist": "build",
-    "dist:win": "export CSC_LINK=$CSC_LINK_WIN && build --platform win",
-    "dist:osx": "export CSC_LINK=$CSC_LINK_MAC && build --platform darwin",
+    "dist:win": "build --platform win",
+    "dist:osx": "build --platform darwin",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./app/index.dev",
     "start": "cross-env NODE_ENV=production electron ./app",
     "docs:clean": "rimraf _book",
@@ -66,7 +66,7 @@
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
-    "electron-builder": "^5.24.0",
+    "electron-builder": "^5.18.0",
     "electron-prebuilt": "^1.2.7",
     "electron-squirrel-startup": "^1.0.0",
     "eslint": "^2.13.1",
