--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rinobotapp",
-  "productName": "rinobot",
-  "version": "0.0.8",
+  "productName": "Rinobot",
+  "version": "0.0.10",
   "author": "rinocloud",
   "repository": "rinocloud/rinobot",
   "description": "Automate data tasks",
