--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build:lib": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.js --progress",
     "build:fork": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.fork.js --progress",
     "dist": "build",
-    "dist:win": "rm -r node_modules/electron-builder/ && npm install electron-builder@5.18.0 && build --platform win",
-    "dist:osx": "rm -r node_modules/electron-builder/ && npm install electron-builder@5.24.0 && build --platform darwin",
+    "dist:win": "build --platform win",
+    "dist:osx": "build --platform darwin",
     "release": "npm run build && npm run dist:osx && npm run dist:win",
     "docs:clean": "rimraf _book",
     "docs:prepare": "gitbook install",
@@ -67,7 +67,7 @@
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
-    "electron-builder": "^5.18.0",
+    "electron-builder": "^5.24.0",
     "electron-prebuilt": "^1.2.7",
     "electron-squirrel-startup": "^1.0.0",
     "eslint": "^2.13.1",
@@ -81,7 +81,6 @@
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
-    "raven": "^0.12.1",
     "redux-debounce": "^1.0.1",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
