--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.3",
+    "semver": "^5.3.0",
     "superagent": "^1.8.3",
     "tar": "^2.2.1"
   },
