added npm to package.json and tried to make it silent to stdout

--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "mkdirp": "^0.5.1",
     "ms": "0.7.1",
     "mv": "^2.1.1",
-    "npmi": "^2.0.1",
+    "npm": "3.9.2",
+    "npmi": "2.0.1",
     "raven": "^0.11.0",
     "source-map-support": "^0.4.2",
     "superagent": "^1.8.3",
