split everything up - seems to work, except no update metadata and no completedtask list

--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "mkdirp": "^0.5.1",
     "ms": "0.7.1",
     "mv": "^2.1.1",
+    "nedb": "^1.8.0",
     "npm": "3.9.2",
     "npmi": "2.0.1",
     "raven": "^0.11.0",
