added read and write history

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "rules": {
       "consistent-return": 0,
       "comma-dangle": 0,
+      "no-shadow": 0,
       "no-use-before-define": 0,
       "import/no-unresolved": [
         2,
