--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-actions": "^0.9.1",
+    "redux-batched-actions": "^0.1.3",
+    "redux-batched-subscribe": "^0.1.6",
     "redux-debounced": "^0.3.0",
     "redux-logger": "^2.6.1",
     "redux-throttle": "^0.1.1",
