--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "docs:watch": "npm run docs:prepare && gitbook serve",
     "docs:publish": "npm run docs:clean && npm run docs:build && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:rinocloud/rinobot gh-pages --force",
 
-    "test": "./node_modules/mocha/bin/mocha --require babel-register --recursive ./app/test/"
+    "test": "node ./node_modules/mocha/bin/mocha --require babel-register --recursive ./app/test/"
   },
   "dependencies": {
     "js-yaml": "^3.6.1",
