--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,5 +18,6 @@ test_script:
 
 build: off
 
-- provider: Slack
-  incoming_webhook: https://hooks.slack.com/services/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
+notifications:
+  - provider: Slack
+    incoming_webhook: https://hooks.slack.com/services/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
