--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "npm": "3.9.2",
     "npmi": "2.0.1",
     "raven": "^0.11.0",
+    "shortid": "^2.2.6",
     "source-map-support": "^0.4.2",
     "superagent": "^1.8.3",
     "superagent-promise-plugin": "^3.2.0",
