--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "dependencies": {
     "js-yaml": "^3.6.1",
     "lodash": "^4.13.1",
+    "mixpanel-browser": "^2.9.16",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
     "moment.twitter": "0.0.1",
+    "raven-js": "^3.7.0",
     "react": "^15.2.1",
     "react-addons-update": "^15.3.1",
     "react-bootstrap": "^0.30.0",
