--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "minimist": "^1.2.0",
     "mocha": "^3.0.2",
     "redux-debounce": "^1.0.1",
+    "sass-loader": "^4.0.2",
     "source-map-support": "^0.4.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
