--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "docs:publish": "npm run docs:clean && npm run docs:build && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:rinocloud/rinobot gh-pages --force"
   },
   "dependencies": {
+    "fs-walk": "0.0.1",
     "js-yaml": "^3.6.1",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
@@ -49,6 +50,8 @@
     "rimraf": "^2.5.3",
     "semver": "^5.3.0",
     "superagent": "^1.8.3",
+    "superagent-d2l-queue": "^3.0.2",
+    "superagent-retry": "^0.6.0",
     "tar": "^2.2.1"
   },
   "devDependencies": {
