--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "react-select-plus": "^1.0.0-beta14.patch1",
+    "react-toggle": "^2.1.1",
     "redux": "^3.5.2",
     "redux-actions": "^0.9.1",
     "redux-batched-actions": "^0.1.3",
@@ -94,6 +95,7 @@
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
     "mocha": "^3.0.2",
+    "react-toggle": "^2.1.1",
     "redux-debounce": "^1.0.1",
     "sass-loader": "^4.0.2",
     "source-map-support": "^0.4.0",
