--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   },
   "dependencies": {
     "fs-walk": "0.0.1",
+    "graceful-fs": "^4.1.9",
     "js-yaml": "^3.6.1",
     "lodash": "^4.13.1",
     "mixpanel-browser": "^2.9.16",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
     "moment.twitter": "0.0.1",
+    "node.js": "0.0.0",
     "raven-js": "^3.7.0",
     "react": "^15.2.1",
     "react-addons-update": "^15.3.1",
@@ -61,7 +63,8 @@
     "superagent": "^1.8.3",
     "superagent-d2l-queue": "^3.0.2",
     "superagent-retry": "^0.6.0",
-    "tar": "^2.2.1"
+    "tar": "^2.2.1",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
