--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-addons-update": "^15.3.1",
     "react-bootstrap": "^0.30.0",
     "react-dom": "^15.2.1",
+    "react-notification-system": "^0.2.10",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
