--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
     "moment.twitter": "0.0.1",
+    "nedb": "^1.8.0",
     "node.js": "0.0.0",
     "raven-js": "^3.7.0",
     "react": "^15.2.1",
@@ -85,6 +86,7 @@
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "devtron": "^1.4.0",
     "electron-builder": "^5.24.0",
     "electron-prebuilt": "^1.2.7",
     "electron-squirrel-startup": "^1.0.0",
