--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-drag-select": "^1.0.0",
     "react-markdown": "^2.4.2",
     "react-notification-system": "^0.2.10",
+    "react-onclickoutside": "^5.7.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
