--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "redux-batched-actions": "^0.1.3",
     "redux-batched-subscribe": "^0.1.6",
     "redux-debounced": "^0.3.0",
+    "redux-form": "^6.2.0",
     "redux-logger": "^2.6.1",
     "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.1.0",
