--- a/package.json
+++ b/package.json
@@ -157,20 +157,15 @@
       "comma-dangle": 0,
       "no-shadow": 0,
       "no-use-before-define": 0,
-      "import/no-unresolved": [
-        2,
-        {
-          "ignore": [
-            "electron"
-          ]
-        }
-      ],
+      "max-len": ["error", 120],
+      "import/no-unresolved": [2, { "ignore": [ "electron" ] } ],
       "react/jsx-no-bind": 0,
       "react/prefer-stateless-function": 0,
       "semi": 0,
       "func-names": 0,
       "no-underscore-dangle": 0,
       "no-console": 0,
+      "no-alert": 0,
       "arrow-body-style": 0
     },
     "plugins": [
