--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.14.1",
     "moment.twitter": "0.0.1",
     "nedb": "^1.8.0",
+    "node-sass": "^3.11.2",
     "node.js": "0.0.0",
     "raven-js": "^3.7.0",
     "react": "^15.2.1",
@@ -157,8 +158,18 @@
       "comma-dangle": 0,
       "no-shadow": 0,
       "no-use-before-define": 0,
-      "max-len": ["error", 120],
-      "import/no-unresolved": [2, { "ignore": [ "electron" ] } ],
+      "max-len": [
+        "error",
+        120
+      ],
+      "import/no-unresolved": [
+        2,
+        {
+          "ignore": [
+            "electron"
+          ]
+        }
+      ],
       "react/jsx-no-bind": 0,
       "react/prefer-stateless-function": 0,
       "semi": 0,
