--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.14.1",
     "moment.twitter": "0.0.1",
     "nedb": "^1.8.0",
+    "node-sass": "^3.11.2",
     "node.js": "0.0.0",
     "raven-js": "^3.7.0",
     "react": "^15.2.1",
@@ -60,6 +61,7 @@
     "redux-batched-actions": "^0.1.3",
     "redux-batched-subscribe": "^0.1.6",
     "redux-debounced": "^0.3.0",
+    "redux-form": "^6.2.0",
     "redux-logger": "^2.6.1",
     "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.1.0",
@@ -156,6 +158,10 @@
       "comma-dangle": 0,
       "no-shadow": 0,
       "no-use-before-define": 0,
+      "max-len": [
+        "error",
+        120
+      ],
       "import/no-unresolved": [
         2,
         {
@@ -170,6 +176,7 @@
       "func-names": 0,
       "no-underscore-dangle": 0,
       "no-console": 0,
+      "no-alert": 0,
       "arrow-body-style": 0
     },
     "plugins": [
