--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rinobotapp",
-  "productName": "Rinobot",
+  "productName": "Rinocloud Desktop",
   "version": "0.1.1",
   "author": "rinocloud",
   "repository": "rinocloud/rinobot",
