--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
   "dependencies": {
     "fs-walk": "0.0.1",
     "graceful-fs": "^4.1.9",
-    "js-yaml": "^3.6.1",
+    "js-yaml": "^3.7.0",
+    "jsondiffpatch": "^0.2.4",
     "lodash": "^4.13.1",
+    "markdown-it": "^8.1.0",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-regexp": "^0.4.0",
+    "marked": "^0.3.6",
     "mixpanel-browser": "^2.9.16",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
@@ -62,6 +67,7 @@
     "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.3",
     "semver": "^5.3.0",
+    "simplemde": "^1.11.2",
     "superagent": "^1.8.3",
     "superagent-d2l-queue": "^3.0.2",
     "superagent-retry": "^0.6.0",
@@ -90,10 +96,10 @@
     "electron-builder": "^5.24.0",
     "electron-prebuilt": "^1.2.7",
     "electron-squirrel-startup": "^1.0.0",
-    "eslint": "^2.13.1",
+    "eslint": "^3.5.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.3.0",
-    "eslint-plugin-import": "^1.10.1",
+    "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "express": "^4.14.0",
@@ -156,7 +162,7 @@
       "no-use-before-define": 0,
       "max-len": [
         "error",
-        120
+        140
       ],
       "import/no-unresolved": [
         2,
@@ -164,6 +170,12 @@
           "ignore": [
             "electron"
           ]
+        }
+      ],
+      "no-multiple-empty-lines": [
+        1,
+        {
+          "max": 10
         }
       ],
       "react/jsx-no-bind": 0,
